# render

./: CMakeLists.txt  README.md
externel/alllib/pkgconfig/: libjpeg.pc  libturbojpeg.pc
externel/dirent/: dirent.h
externel/glad/include/glad/: glad.h
externel/glad/src/: glad.c
headers/: Bound.h  CheckShader.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.h  basestructure.h  calcuateCurvature.h  logging.h  stb_image.cpp
newview/: IteratorForLight.h  NewCamera.h  Rgb2Hsv.h  WriteImage.h  newView.cpp  newView.h  trackball.cpp  trackball.h
newview/asset/: ChooseBuffer.fs  ChooseBuffer.vs  brdf.vs  brdf_new.fs  dianyinying.vs  transparent.fs  transparent.vs
